feat: transparent WebSocket reconnection engine (opt-in)
Server-side:
- RecordingEncoder: buffers all protocol ops during UIContext suspension
  with compaction (merge consecutive updates, cancel create+remove pairs)
- UIContext.suspend(timeoutMs): swaps encoder, starts timeout virtual thread
- UIContext.resume(WebSocket): compacts, replays buffer, sends RECONNECT_CONTEXT
- Overflow protection: configurable max entries, session kill on overflow
- CommunicationSanityChecker: isSuspended() guard to skip checks during suspension
- WebSocket: null guards on onWebSocketError/onWebSocketClose for pre-init errors
- ReconnectionListener: server-side hook on WebSocket disconnect

Client-side:
- PonySDK.buildReconnectUrl(): builds ws URL with ?Y=<uiContextId>
- PonySDK.reconnectSocket(): creates new WebSocket to resume session
- UIBuilder: handles RECONNECT_CONTEXT model to confirm reconnection
- ReconnectionChecker: transparent reconnect when ponyReconnectMode=true

Protocol:
- ServerToClientModel.RECONNECT_CONTEXT: server→client reconnection signal
- ClientToServerModel.RECONNECT_UI_CONTEXT_ID: client→server context ID

Opt-in via config.setReconnectionTimeoutMs(ms). Default: 0 (disabled).
Safe for trading: no reconnection unless explicitly enabled.